--- a/app.json
+++ b/app.json
@@ -4,7 +4,8 @@
     "pages/podcast/podcast",
     "pages/my/my",
     "pages/focus/focus",
-    "pages/community/community"
+    "pages/community/community",
+    "pages/fFlyaPage/fFlyaPage"
   ],
   "window": {
     "defaultTitle": "jiashan_test"
